tests/baselines/reference/privateNamesAndStaticMethods.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts(26,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticMethods.ts (1 errors) ====
    class A {
        static #foo(a: number) {}
        static async #bar(a: number) {}
        static async *#baz(a: number) {
            return 3;
        }
        static #_quux: number;
        static get #quux (): number {
            return this.#_quux;
        }
        static set #quux (val: number) {
            this.#_quux = val; 
        }
        constructor () {
            A.#foo(30);
            A.#bar(30);
            A.#bar(30);
            A.#quux = A.#quux + 1;
            A.#quux++;
     }
    }
    
    class B extends A {
        static #foo(a: string) {}
        constructor () {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
            B.#foo("str");
        }
    }
    